--- a/trash.tex
+++ b/trash.tex
@@ -124,141 +124,45 @@
 
 
 
-\section{Classifier : Decision Trees}
+\section{Decision Tree extension to Random Forests}\label{section-randomForests}
+%\textbf{L Breiman Paper}\cite{breiman-randomforests}
 
-%rview of this supervised learner used in regression and classification problems.
+Random Forests are a special type of classifier in which a set of weaker learners are grouped together to build a stronger classifier. The idea is to have Decision Trees as week learners and to ensemble them together. 
 
-% The models builds a
-Decision trees are such as in the graph theoretical sense where each node acts as a rule to which any input sample can comply or not. The rules are built as linear (or similar) partitions of input space and they are built on the value of a given feature 
-%properties of the values for each feature. 
+First described by \cite{HoFirstRandomForest}, Random  Forests were first built by combining a number of trees with a technique called bootstrap aggregation or \textit{bagging}. The  motivation behind this, was that Decision Trees were a very low biased classifier which had high variance. To improve on this, the authors proposed a heuristic to try and lower the overall variance of the weak learners by sampling the dataset used to build each individual learner. They then showed experiments where the the combined performance of the group of trees had a big decrease in variance at the expense of a small bias increase which gave an overall decrease in the generalization error.
 
-At any6 given node the model takes a decision to include or exclude a sample $s$ from that partition by checking if $X_i(s) \in U$ where $X_i$ might be any given feature of the data and $U$ is a subset of said feature's space.
+The main idea behind ensembling trees is that if we have a selection of $K$ i.i.d. random variables with common variance $\sigma^2$, then the average of this selection will have variance $\frac{\sigma^2}{K}$. 
 
-For numerical features, the input space $X$ willi be partitioned into  $L$ and $R$ where $L$ of the form $(-\infty,c]$.  The value $c \in \mathbb{R}$ is any given number predefined by the rule itself.   In the same way, for categorical features $L$ will be a subset of the possible values of that feature. 
+Other works have explored on low-bias and high-variance scenarios where base models have low training error and high test errors. In \cite{breiman-arcingclassifiers}, a more accurate description of this problem is detailed with a number of real datasets. We cite here that, in some cases, \textit{..small perturbations in their  training  sets  or  in  construction  may  result  in  large  changes  in  the  constructed  predictor}.
 
-Altogether, a tree defines a partition of feature space in disjoint regions $A_1,...,A_K$ such that the tree's predicted output $\hat{y}$ for a sample $x$ is $c_k$ if the sample belongs to $A_k$. Here $c_k$ is one of the possible values taken by the target variable $y$ in the training set. And by the way trees were built, each $A_k$ is a hyper-rectangles in feature space.
+All in all, we can expect to improve the  overall generalization error  by combining the predictions of a set of base learners. The general idea is that this combination hast to be done in  \textit{some} randomized way for which the variance is decreased.
+%and robustness of the aggregated learner improve as a consequence of this. 
 
-In brief, the learner can be characterized by 
-\[
-h(X) = \sum_{k=1}^K c_k I(X \in A_k)
-\]\label{equation-decisionTreeModel}
+The two most usual ways of building ensemble classifiers are by averaging or by boosting the base learners. Random Forests are an example of the former, where base estimators are built as uncorrelated or independent as possible and then the predictions are averaged out for an overall prediction. For the second case predictors are built iteratively by adding new estimators to the overall set in such a way that the overall train misclassification rate is lowered every time.
 
-where $c_k$ is the value that our model estimates for samples in the $A_k$ region. Both of these will have to be learnt by the model in the optimization procedure. %by minimizing its loss funciton.
+In ensemling methods, we can say that, compared to a weak learner, randomly combining a group of learners will improve the overall model's variance at the expense of a minor reduction of the model's bias. In general, the opposite can be said about boosting methods, where the estimator's bias is reduced at every step whilst the model increases its generalization error. Thus in boosting methods, variance has to be carefully controlled. 
 
-By the points given above, the algorithm needs to determine what is the best way to split a set of samples that flow through a decision node. The \textit{goodness of split} will be measured by the loss metric of the algorithm. Here, the criteria used to decide on node splits are called \textit{node impurity measures}.
-%them according, in order to optimize a loss metric. 
-
-%at each node 
-Most variations for this machine learning model build rules in a greedy fashion, where node impurity measures are locally optimized at each node to decide on which is the best splitting value. The reason for doing this is because not doing so will result in an algorithm whose computational complexity is infeasible. Given that the construction of optimal binary decision trees is NP-Complete \cite{decisionTreesNP}, the optimal rules for the tree are then fit sequentially.
-
-In conclusion, at any splitting node we have to find the \textit{best} feature $X^p$ and value split $t$ for which to partition the data in
-$A_L = \{x \in \mathcal{T} \  / \ x^p \leq t \} $ and $A_R = \{x \in \mathcal{T}\  / \ x^p> t \} $. Let $N_l$ and $N_r$ be $|A_L|$ and $|A_R|$ respectively. Then, to quantify the \textit{best} feature for this split the algorithm minimizes:
-
-%\frac{1}{N_{left}}
-%\frac{1}{N_{right}}
-
-\[
-%\begin{split}
-min_{p,t} \big[ min_{c_L }   \frac{1}{N_l}\sum_{x \in A_L(p,t) } L(y,c_L)        \ +   min_{c_R}   \frac{1}{N_r}\sum_{x \in A_R(p,t) }  L(y,c_R) \big]
-%\end{split}
-\]\label{equation-decisionTreeGreedyOptimization}
-
-where $y$ is the target associated to our sample $x$ and $L(\cdot)$ is the loss function we have used to measure the quality of our split. Note that this can be done efficiently for a wide range of loss functions since the minimization can be done for each feature independently. 
-
-A tree is then grown in an iterative way from the top down \footnote{In this context the \textit{top} of a tree refers to the root of the tree.}, estimating the appropriate parameters at each rule split. All of the training set's samples would start at the top (the root node) and then travel down through the trees branches, in accordance to their fulfillment or not of each node's rule. A branch of the tree would stop growing once all samples at a node belong to the same target class.
-
-Finally, we would have that the tree's leafs are the partition subsets over the input data and once a learner is fit, predicting targets for new samples is straightforward: the prediction of their target class will be the value given after traveling the sample down to its corresponding leaf node.  
-
-To illustrate this method, an instance is show in figure \ref{rf-treeFigure}. This classification tree example is built for the two class problem of gender prediction using data from CDRs:
-%[.{\textit{Woman}}]
-\smallskip
-\begin{figure}[h]\label{rf-treeFigure}
-	\Tree[.{ $Calling\_Volume \leq 23$ } [.{$Province \in \{ San Luis, Chubut \} $} [.{$Time\_Weekend \geq 16$} [.{\textit{M}} ] [.{\textit{F}} ]  ]
-	[.{$Calls\_Weekdays \leq 48$} 
-	[.{ $Time\_Weekday \geq 17$} [.{\textit{M}} ] [.{\textit{F}} ]] [.{\textit{F}} ] ]  ]
-	[.{$Calls\_Mondays \geq 2$} [.{$Province \in \{ Chubut, Cordoba \} $}  [.{\textit{M}} ] [.{\textit{F}} ] ]
-	[.{\textit{M}}  ]]]
-	
-\end{figure}
-
-\smallskip
-
-%[.{\textit{M}} ] [.{\textit{F}} ]
-
-The most used metrics to build each rule are the \textit{Gini impurity measure} and the \textit{entropy} or \textit{information gain} criterion. The former optimizes for misclassification error in the two resulting sets. Where it values the accuracy of the model if all samples were to be tagged with the most common target-label in that split. The latter optimizes for information entropy, which is analogous to minimizing \textit{Kullback-Liebler divergence} of the resulting sets with respect to the original set previous to the split. 
-
-In decision trees, the process of iteratively partitioning the samples in splits continues until a predefined tuning parameter limit will stop the optimization or when there is only a single target class for all samples at the node. 
-
-The hyper-parameters for this model include the length of the tree,  the splitting rule threshold and the node impurity measures. From the descriptions previously given, we can list these directly:
-
-\begin{itemize}
-	\item Max depth of the tree, or the number of allowed level of splits.
-	\item The criteria or measure used to select the best split feature at each node.
-	\item The leaf size or the total number of minimum samples allowed per leaf. Note that this is a limit imposed on  branch depth. 
-	\item Number of features selected to decide on the best split feature at each node.
-\end{itemize}
+A common trait of the two class of methods is that the prediction for new samples is given over the average of individual classifiers or the most frequent class in the ensemble.  This will result in a variance decrease which usually compensates more than the overall increase in bias.
 
 
-Intuitively, it is natural to find that trees of longer depth will overfit the data since more complex interactions among variables will be captured by refining the partition on input space. A trivial case would be to allow a tree to grow fully in depth and later assign to each sample in the training set its own region. This would yield a model with absolutely no bias but which will have a very high prediction error since new samples won't be labeled accordingly. 
+For Random Forests algorithms, there exist a wide range of variants in the literature.  \cite{breiman-randomforests}  gives a list of the most used variants and points that the difference among them lies on how randomization is applied to group the base learners.  For example, we could select i.i.d samples from the training set to build each specific tree, or we could sample a subset of features at each decision node. Also, we could determine if the split taken at a tree node is from a random subset among the best splitting features. For all the different variants, tuning parameters for a Random Forest routine will be correspondent to each of them.
 
-On the other hand having a tree which is too shallow will result in most cases in a biased algorithm.  This is because it results in an overly simple model incapable of correctly assigning labels.  We must then consider that the depth of a tree is a measure of the model's complexity and as such one of the most important hyperparameters of our model. 
+In addition, Random Forests' tuning parameteres include those that we have in Decision Trees and an extra value must be set to get the total number of weak learners used to build the ensemble. 
+%Naturally, we will find there is a tradeoff in bias-variance with different  combinations of hyperparameters. 
+%We will not survey all of the different varieties of the algorithm but some of the ideas that are applied work as follows:
 
-Another drawback of the model is the high variance instability. Authors point out that two very similar datasets can grow two very different resulting trees. This is due to the hierarchical nature of the splits, where errors randomly made in the first splits will be carried onward towards the leafs sinces samples continue down on a single branch.
+%\begin{itemize}
+%	\item Building a tree with a bootstrap sample.
+%	\item Sampling among the best split features at each node.
+%	\item Sampling features to build each individual tree.
+%\end{itemize}
 
-The most common methods to control the tree's depth grow a very large tree $T_0$ that will continue until it reaches a depth limit threshold that is very unrestrictive. Then the tree will be pruned by removing branches and nodes to remove model complexity with only  a slight loss of accuracy. 
+The generalization error for the forests will converge almost surely as we increase the number of base estimators used to train the model. This error will depend uniquely on the predictive error of each base learner and collectively from the correlation among them.
 
-To expand on this idea, let $T \subset T_0$ be a subtree of the first tree, where $T$ is obtained by pruning $T_0$.  Here the partition regions $R_j$ will be associated to $T$'s terminal nodes or leafs, indexed by $j$, which $j \in \{1,...,|T|  \}$. 
+In a supervised classification problem, a Random Forest will output a solution by making the base learners vote on the  target class. This procedure for given new predictions from unseen samples is fast once the forest has been constructed, but they can be computationally heavy structures.
 
-Given a loss function, and a problem with $K$ possible target classes, we can define the following values:
-\begin{equation}
-\begin{split}
-N_j & =  \mid\{x \in R_j \}\mid\\
-\hat{p}_{jk} & = \frac{1}{N_j} \sum_{x \in R_j}  I(y=k)\\
-c_j & =  argmax_{k} \  \hat{p}_{jk} \\
-\end{split}
-\end{equation}\label{decisionTreePruneParameters}
-
-As we have mentioned before, at each split we use the node impurity measure to quantify this action. Here, we will denote $Q_j(T)$ to be the impurity measure for region $j$. In addition, we list the three most used impurity measures of classification trees:
-
-\begin{itemize}
-	\item Misclassification error: $ \displaystyle \frac{1}{N_j} \sum_{x \in R_j}  I(y\neq c_j)  = 1 - c_j $
-	\item Gini index: $ \displaystyle \sum_{k\neq k'} \hat{p}_{jk} \hat{p}_{jk'}   = \sum_{k=1}^{K} \hat{p}_{jk} (1 - \hat{p}_{jk})  $
-	\item Cross-entropy: $ \displaystyle \sum_{k=1}^{K} -log(\hat{p}_{jk})\hat{p}_{jk} $
-\end{itemize}
-
-
-As an extension to the Gini index, it is also common to use a reweighted version of the sum. A loss matrix is multiplied to the factors in each summand. The matrix is reassigning weights to different cases of misclassification. Indeed, these weights become practical when we have that a sample from class $k$ incorrectly assigned to class $k'$ might be less important than other misclassifications. 
-
-Let $L \in \mathbb R_{\ge 0}^{K \times K}$ where $(L)_{(k,k')}$ is the cost of misclassifying a class $k$ sample into $k'$. Naturally we have that $L$ is a null diagonal matrix. Then the Gini index's summands will take the reweighted form  $L_{kk'} \hat{p}_{jk} \hat{p}_{jk'}$.
-
-For the binary (two class) case $Q_j(T)$ can be expressed in simpler terms. If we consider $p$ to be the probability of success, then we have 
-
-\begin{itemize}
-	\item Misclassification binary error: $1 - max(p, 1-p)$
-	\item Gini binary index: $ 2p(1-p) $
-	\item Binary cross-entropy: $ -log(p)p - log(1- p)(1-p) $
-\end{itemize}\label{decisionTreeCostFunctions}
-
-In summary, we will have an impurity measure for each region $R_j$ and the altorithm will then aggregate all of them into a single measure called the \textit{cost complexity criterion}. The idea is that this loss function, as a function of a tree, will control the whole optimization procedure through the tree's parameters. The criterion will be managed to control the final model's bias and variance. We define it in the following way
-
-\begin{equation}
-C_\alpha(T)  = \sum_{j=1}^{|T|} N_j Q_j(T)  + \alpha|T| 
-\end{equation}\label{decisionTreeCostComplexity}
-
-
-Here  $\alpha \in \mathbb{R}_{\geq 0}$ is a tuning parameter that values the trade-off between the tree complexity, as given by its depth, and the accuracy of the model as given by the measure we proposed in \ref{decisionTreeCostFunctions}. The idea is that given an $\alpha$ we find the subtree $T_{alpha} \subset T_0$ that minimizes \ref{decisionTreeCostComplexity}. 
-
-There are various methods we could use to find the optimal subtree. As an example, here we give an example of the \textit{weakest link pruning} algorithm which goes as follows:
-%must \textit{prune} the initially grown tree 
-
-Let  $B(T)  = \sum_{j} N_j Q_j(T) $ be our pure loss function, without any complexity cost added. \cite{breiman-cart84} shows that we can find $T_{alpha}$ included in a sequence of trees built for this. This sequence is constructed by iteratively pruning the node $j$ that, when removed from the tree, creates the smallest increase in $B(T)$. 
-
-In this way, we'll have a sequence of trees $T_0,T_1,...,T_l$ and a sequence of nodes $j_0, j_1,...,j_l$ respectively the ones minimizing the increase in $B(T_0),B(T_1),...,B(T_l)$ at each step. The algorithm will stop when have reached the root node and we will find our tree $T_{alpha}$ by comparing all of the $C_\alpha(T)$ for all of the trees built in the sequence. In practice, it is common to have this procedure done within a $K$-fold cross validation routine to reach to an estimated $\hat{\alpha}$.
-
-For a more complete explanation of a decision tree for classification or regression problems, please refer to \cite{breiman-cart84}.
 
 \textit{}
-
 
 \end{document}
 
