--- a/section_Brief_ovierview_to_machine__.tex
+++ b/section_Brief_ovierview_to_machine__.tex
@@ -24,5 +24,5 @@ In its essence, a machine learning method is a probabilistic model built from da
 
 %At this point it is important to start noting
 
-These subtle differences in the way machine learning approaches a problem is also reflected in the terminology used by the field. Here most terms have equivalent or similar notations to those used in classic statistics. As a start, the \textit{dependent} $Y$ is called the target or label and the \textit{independent} variables, \textit{covariates} or \textit{input variables} are named \textit{features} in this case. 
+These subtle differences in the way machine learning approaches a problem is also reflected in the terminology used by the field. We know that different disciplines often speak about the same machine learning methods in different terms and this difference is most notable with classic statistics. Where we can, we will be identifying these differences along the text. As a start, the \textit{dependent} $Y$ is called the target or label and the \textit{independent} variables, \textit{covariates} or \textit{input variables} are named \textit{features} in this case. 
 %Labels that are representing categorical or discrete variables are also named factors or \textit{qualitative} variables. 
